fix: stars flicker more

--- a/styles/index.css
+++ b/styles/index.css
@@ -239,19 +239,18 @@ a {
   display: block;
   opacity: 1;
   transform: translateY(0);
-  /* No opacity transformation bc it looks weird */
   transition: transform 0.5s ease;
 }
 
 @keyframes flicker {
   0% {
-    opacity: 0.7;
+    opacity: 0.667;
   }
   50% {
     opacity: 1;
   }
   100% {
-    opacity: 0.6;
+    opacity: 0.332;
   }
 }
 
